# kubernetes-hy

./: README.md
part1/: README.md
part1/log-output/: Cargo.toml  Dockerfile
part1/log-output/manifests/: deployment.yaml
part1/log-output/src/: main.rs
part1/project-todo/: Cargo.toml  Dockerfile
part1/project-todo/manifests/: deployment.yaml
part1/project-todo/src/: main.rs
