[package]
name = "project-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
dotenv = "0.15.0"
hyper = "0.14.24"
rand = "0.8.5"
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
